[gd_scene load_steps=4 format=3 uid="uid://dy0if2xc3iyia"]

[ext_resource type="Theme" uid="uid://scev88nm8kc5" path="res://FontTheme.tres" id="1_0p740"]
[ext_resource type="Script" path="res://Scripts/Menu/menu.gd" id="2_m27xr"]
[ext_resource type="Material" uid="uid://ci8fr3n7t2pef" path="res://Shaders/CRT_Edited.tres" id="3_y3xse"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0p740")
script = ExtResource("2_m27xr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Start"

[node name="Bestiary" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bestiary"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_0p740")
theme_override_colors/font_color = Color(0.729412, 0.12549, 0.145098, 1)
theme_override_font_sizes/font_size = 24
text = "High Score: 0"

[node name="ColorRect_Shader" type="ColorRect" parent="."]
visible = false
material = ExtResource("3_y3xse")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Start" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Bestiary" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Bestiary" to="." method="_on_bestiary_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bestiary" to="." method="_on_bestiary_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Options" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
